--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatAppSocket"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="35">
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +23,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".RegisterActivity" />
-<!--        <activity android:name=".MainActivity" />-->
-        <activity android:name=".ChatSelectActivity" />
-        <activity android:name=".ChatActivity" />
-        <activity android:name=".NewChatActivity" />
+        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.ChatSelectActivity" />
+        <activity android:name=".activities.ChatActivity" />
+        <activity android:name=".activities.NewChatActivity" />
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
