--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,18 @@
         android:theme="@style/Theme.ChatAppSocket"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        tools:targetApi="35">
-        <activity
-            android:name=".activities.LoginActivity"
+        tools:targetApi="35"
+        android:name=".ChatAppSocket">
+        <activity android:name=".activities.LoginActivity"/>
+
+        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.ChatSelectActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activities.RegisterActivity" />
-        <activity android:name=".activities.ChatSelectActivity" />
         <activity android:name=".activities.ChatActivity" />
         <activity android:name=".activities.NewChatActivity" />
     </application>
