--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,24 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ChatAppSocket"
-        android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        tools:targetApi="35"
-        android:name=".ChatAppSocket">
-        <activity android:name=".activities.LoginActivity"/>
-
-        <activity android:name=".activities.RegisterActivity" />
-        <activity android:name=".activities.ChatSelectActivity"
-            android:exported="true">
+        android:theme="@style/Theme.Chatappsocket"
+        tools:targetApi="31">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Chatappsocket">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ChatActivity" />
-        <activity android:name=".activities.NewChatUsersSelectActivity" />
-        <activity android:name=".activities.NewChatNameSelectActivity" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
