--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@style/Theme.Chatappsocket"
+        android:theme="@style/Theme.ChatAppSocket"
         tools:targetApi="31">
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Chatappsocket">
+            android:theme="@style/Theme.ChatAppSocket">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
